--- a/equipe.html
+++ b/equipe.html
@@ -188,7 +188,8 @@ function mostrarMembros() {
   listaMembros += membrosLv1.map(membro => `
     <div class="membro">
       <strong>Nome:</strong> ${membro.nome} <br>
-      <strong>Telefone:</strong> ${mascararTelefone(membro.telefone)}
+      <strong>Telefone:</strong> ${mascararTelefone(membro.telefone)} <br>
+      <strong>Data de Cadastro:</strong> ${formatarData(membro.timestamp)}
     </div>
   `).join("");
 
@@ -196,7 +197,8 @@ function mostrarMembros() {
   listaMembros += membrosLv2.map(membro => `
     <div class="membro">
       <strong>Nome:</strong> ${membro.nome} <br>
-      <strong>Telefone:</strong> ${mascararTelefone(membro.telefone)}
+      <strong>Telefone:</strong> ${mascararTelefone(membro.telefone)} <br>
+      <strong>Data de Cadastro:</strong> ${formatarData(membro.timestamp)}
     </div>
   `).join("");
 
@@ -204,7 +206,8 @@ function mostrarMembros() {
   listaMembros += membrosLv3.map(membro => `
     <div class="membro">
       <strong>Nome:</strong> ${membro.nome} <br>
-      <strong>Telefone:</strong> ${mascararTelefone(membro.telefone)}
+      <strong>Telefone:</strong> ${mascararTelefone(membro.telefone)} <br>
+      <strong>Data de Cadastro:</strong> ${formatarData(membro.timestamp)}
     </div>
   `).join("");
 
@@ -212,22 +215,29 @@ function mostrarMembros() {
 }
 
 function mascararTelefone(telefone) {
-  return telefone.replace(/(\d{2})(\d{5})(\d{4})/, "($1) $2-$3");
+  return `(${telefone.slice(0, 2)}) ${telefone.slice(2, 6)}-****`;
+}
+
+function formatarData(timestamp) {
+  const data = new Date(timestamp);
+  const dia = String(data.getDate()).padStart(2, "0");
+  const mes = String(data.getMonth() + 1).padStart(2, "0");
+  const ano = data.getFullYear();
+  return `${dia}/${mes}/${ano}`;
+}
+
+function compartilharWhatsApp() {
+  const mensagem = encodeURIComponent("Junte-se à minha equipe no H Invest! Use o código de convite para se inscrever: " + meuCodigo + " - https://inves13.github.io/hivest-codigo-1/?codigo=" + encodeURIComponent(meuCodigo));
+  const url = `https://wa.me/?text=${mensagem}`;
+  window.open(url, "_blank");
 }
 
 function copiarTexto(id) {
   const texto = document.getElementById(id).innerText;
   navigator.clipboard.writeText(texto).then(() => {
-    alert("Texto copiado!");
+    alert("Texto copiado: " + texto);
   });
 }
-
-function compartilharWhatsApp() {
-  const mensagem = "Junte-se à minha equipe no H Invest! Use o código de convite para se inscrever: " + meuCodigo + " - " + "https://inves13.github.io/hivest-codigo-1/?codigo=" + encodeURIComponent(meuCodigo);
-  const url = "https://wa.me/?text=" + encodeURIComponent(mensagem);
-  window.open(url, "_blank");
-}
 </script>
-
 </body>
 </html>
