--- a/equipe.html
+++ b/equipe.html
@@ -123,6 +123,7 @@ if (!telefoneLogado) {
 let meuCodigo = "";
 let membrosLv1 = [], membrosLv2 = [], membrosLv3 = [];
 let bonusTotal = 0; // Variável para armazenar o bônus total
+let saldoConta = 60.00; // Exemplo de saldo inicial da conta, você pode pegar isso do Firebase também
 
 db.ref("usuarios/" + telefoneLogado).once("value").then(snapshot => {
   const user = snapshot.val();
@@ -192,16 +193,16 @@ function mostrarMembros() {
     <div class="membro">
       <strong>Nome:</strong> ${membro.nome} <br>
       <strong>Telefone:</strong> ${mascararTelefone(membro.telefone)} <br>
-      <strong>Data de Cadastro:</strong> ${formatarData(membro.timestamp)}
+      <strong>Código:</strong> ${membro.codigo} <br><br>
     </div>
   `).join("");
-
+  
   listaMembros += "<h3>Lv2 Membros</h3>";
   listaMembros += membrosLv2.map(membro => `
     <div class="membro">
       <strong>Nome:</strong> ${membro.nome} <br>
       <strong>Telefone:</strong> ${mascararTelefone(membro.telefone)} <br>
-      <strong>Data de Cadastro:</strong> ${formatarData(membro.timestamp)}
+      <strong>Código:</strong> ${membro.codigo} <br><br>
     </div>
   `).join("");
 
@@ -210,29 +211,15 @@ function mostrarMembros() {
     <div class="membro">
       <strong>Nome:</strong> ${membro.nome} <br>
       <strong>Telefone:</strong> ${mascararTelefone(membro.telefone)} <br>
-      <strong>Data de Cadastro:</strong> ${formatarData(membro.timestamp)}
+      <strong>Código:</strong> ${membro.codigo} <br><br>
     </div>
   `).join("");
 
   document.getElementById("membros-lista").innerHTML = listaMembros;
 }
 
-function formatarData(timestamp) {
-  const data = new Date(timestamp);
-  return data.toLocaleDateString("pt-BR");
-}
-
-function mascararTelefone(telefone) {
-  const ddd = telefone.slice(0, 2); // Pegando o DDD (primeiros 2 números)
-  const prefixo = telefone.slice(2, 6); // Pegando o prefixo (próximos 4 números)
-  const sufixo = telefone.slice(6); // Pegando o sufixo (últimos 4 números)
-
-  // Substitui os dois números do meio por "**"
-  return `${ddd} ${prefixo}**${sufixo.slice(0, 4)}`;
-}
-
-function copiarTexto(elementoId) {
-  const texto = document.getElementById(elementoId).innerText;
+function copiarTexto(id) {
+  const texto = document.getElementById(id).innerText;
   navigator.clipboard.writeText(texto).then(() => {
     alert('Texto copiado para a área de transferência!');
   });
@@ -245,12 +232,18 @@ function compartilharWhatsApp() {
 }
 
 function resgatarBônus() {
-  const saldoConta = 100; // Exemplo de saldo na conta
-  const novoSaldo = saldoConta + bonusTotal;
-  alert(`Você resgatou R$ ${bonusTotal.toFixed(2)}! Agora o seu saldo na conta é R$ ${novoSaldo.toFixed(2)}.`);
-  // Atualiza o saldo na Firebase ou localStorage (dependendo de como você armazena)
-  bonusTotal = 0; // Zera o bônus total após resgatar
+  // Adiciona o valor do bônus ao saldo da conta
+  saldoConta += bonusTotal;
+  
+  // Atualiza o saldo no Firebase
+  db.ref("usuarios/" + telefoneLogado).update({ saldoConta: saldoConta });
+  
+  // Zera o bônus
+  bonusTotal = 0;
   document.getElementById("total-bonus").innerText = "R$ 0,00";
+  
+  // Exibe mensagem de sucesso
+  alert(`Você resgatou R$ ${bonusTotal.toFixed(2)}! Agora o seu saldo na conta é R$ ${saldoConta.toFixed(2)}.`);
 }
 </script>
 </body>
